@@ -962,3 +962,9 @@ DISCOVER
 
 #feedback_links2_txt
 <a href="mailto:support@iatistandard.org">向我们发送电子邮件</a>或提出问题<a href="https://github.com/devinit/D-Portal/issues">在Github上</a>
+
+#install_button_text
+发电机
+
+#install_info_text
+创建小工具为您的网站。
