@@ -962,3 +962,9 @@ Feedback?
 
 #feedback_links2_txt
 <a href="mailto:support@iatistandard.org">Send us an email</a> or raise an issue <a href="https://github.com/devinit/D-Portal/issues">on Github</a>
+
+#install_button_text
+Generator
+
+#install_info_text
+Widgets for your website.
