@@ -964,3 +964,9 @@ Retour d'information?
 
 #feedback_links2_txt
 <a href="mailto:support@iatistandard.org">Envoyez-nous un e-mail</a> ou soulevez un problème <a href="https://github.com/devinit/D-Portal/issues">sur Github</a>
+
+#install_button_text
+Générateur
+
+#install_info_text
+Créer des widgets pour votre site web.
