@@ -961,3 +961,9 @@ DISCOVER
 
 #feedback_links2_txt
 <a href="mailto:support@iatistandard.org">हमें एक ईमेल भेजो</a> या एक मुद्दा उठाना <a href="https://github.com/devinit/D-Portal/issues">Github पर</a>
+
+#install_button_text
+जेनरेटर
+
+#install_info_text
+अपनी वेबसाइट के लिए विगेट्स बना. 
