@@ -964,3 +964,9 @@ DISCOVER
 
 #feedback_links2_txt
 <a href="mailto:support@iatistandard.org">メールを送信</a>するか、<a href="https://github.com/devinit/D-Portal/issues">問題を提起する Github</a>
+
+#install_button_text
+発電機
+
+#install_info_text
+あなたのウェブサイトのためのウィジェットを作成します。
