@@ -961,3 +961,9 @@ Comparar Editores
 
 #feedback_links2_txt
 <a href="mailto:support@iatistandard.org">Envíenos un correo electrónico</a> o plantee un problema <a href="https://github.com/devinit/D-Portal/issues">en Github</a>
+
+#install_button_text
+Generador
+
+#install_info_text
+Crear widgets para tu sitio web.
