@@ -14,6 +14,7 @@ Added translations for new sections
 Added dropmenu on search view
 Fixed dropmenu width issues
 Adjusted image brightness on search view
+Added Generator banner to search view
 
 
 Development Portal (2016-11-08 shi)
